# ssnt-nutrition

./: README.md  demo.avif
backend/: .gitignore  Cargo.toml  README.md
backend/src/: main.rs
frontend/: .env  .env.production  README.md  biome.json  bunfig.toml  index.html  package.json
frontend/src/: App.css  App.tsx  BackendUrlContext.ts  common.ts  frontend.tsx  i18n.ts  index.css  index.html  index.tsx  main.tsx
frontend/src/components/: AppContent.tsx  DotCountInput.tsx  Goals.tsx  Portions.tsx
frontend/src/test/: AppContent.test.tsx  DotCountInput.test.tsx  Goals.test.tsx  Portions.test.tsx  common.test.ts  happydom.ts  i18n.test.ts  setup.ts  testing-library.ts  utils.tsx
frontend/src/types/: bun-matchers.d.ts
githooks/: pre-commit
