[package]
name = "ssnt_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
regex = "1.12"
rusqlite = "0.38"
thiserror = "2.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
axum-test = "18.7"
serde_json = "1.0"
